examples/test/testpolicy17935.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17935
  namespace: namespace266
spec:
  podSelector:
    matchLabels:
      key27: value32
      key15: value22
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value48
          key9: value11
          key7: value25
      podSelector:
        matchLabels:
          key37: value13
          key14: value29
